trash: Fix trash::orig-path for relative paths

The trash::orig-path attribute calucaltion expects that the trash
is only one dir (i.e. .Trash, .Trash-$UID) and it fails for relative
paths in case it is not (i.e. .Trash/$UID). Let's propagate the topdir
and fix relative path handling...

https://bugzilla.gnome.org/show_bug.cgi?id=789328